--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-title" content="SoSGBSheet" />
     <link rel="manifest" href="%BASE_URL%favicon/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Digimon Time Stranger</title>
+    <title>Inazuma Eleven Guide</title>
     
   </head>
   
