--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     <link rel="manifest" href="%BASE_URL%favicon/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inazuma Eleven Guide</title>
-    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-77YV72GSQV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'G-77YV72GSQV');
+    </script>
   </head>
   
   <body>
