Add meta tags and structured data to index.html for improved SEO and social media sharing. This includes Open Graph and Twitter Card metadata, as well as a JSON-LD script for better search engine understanding of the application.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     <link rel="manifest" href="%BASE_URL%favicon/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inazuma Eleven Guide</title>
+    <meta
+      name="description"
+      content="Browse every Inazuma Eleven Victory Road player, compare stats, plan teams, and track equipment in a fast, touch-friendly reference built for active managers."
+    />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://inazuma-vr.statframe.site/" />
+    <meta name="application-name" content="Inazuma Eleven Guide" />
+    <meta name="theme-color" content="#0b1017" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Inazuma Eleven Guide & Team Builder" />
+    <meta property="og:description" content="Players encyclopedia, stat comparisons, hissatsu lookup, and roster planning tools tuned for mobile coaches." />
+    <meta property="og:url" content="https://inazuma-vr.statframe.site/" />
+    <meta property="og:image" content="https://inazuma-vr.statframe.site/favicon/web-app-manifest-512x512.png" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Inazuma Eleven Guide & Team Builder" />
+    <meta property="twitter:description" content="Fast, mobile-first database for every Inazuma Eleven player plus roster planning utilities." />
+    <meta property="twitter:image" content="https://inazuma-vr.statframe.site/favicon/web-app-manifest-512x512.png" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-77YV72GSQV"></script>
     <script>
@@ -17,8 +34,24 @@
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag('js', new Date());
-      gtag('config', 'G-77YV72GSQV');
+      gtag("js", new Date());
+      gtag("config", "G-77YV72GSQV");
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Inazuma Eleven Guide",
+        "url": "https://inazuma-vr.statframe.site/",
+        "description": "Mobile-first encyclopedia for canonical Inazuma Eleven players, equipment, and hissatsu techniques with a drag-and-drop team builder.",
+        "applicationCategory": "ReferenceApplication",
+        "operatingSystem": "any",
+        "image": "https://inazuma-vr.statframe.site/favicon/web-app-manifest-512x512.png",
+        "creator": {
+          "@type": "Person",
+          "name": "Inazuma Eleven Guide"
+        }
+      }
     </script>
   </head>
   
