Add structured data for organization in index.html
- Introduced JSON-LD script to enhance SEO and provide structured information about the organization.
- Included organization name, URL, and logo for better visibility in search results.

--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
         }
       })();
     </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "StatFrame - Inazuma Eleven VC",
+        "url": "https://inazuma-vr.statframe.site/",
+        "logo": "https://inazuma-vr.statframe.site/favicon/web-app-manifest-512x512.png"
+      }
+    </script>
   </head>
   
   <body>
